fixing W3C validator errors and warnings

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -27,9 +27,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li>Home</li>
-          <li>Work</li>
-          <li style="color:var(--secondary-light-2)"><strong>About</strong></li>
+          <li><a href="../index.html" class="header-tag secondary-l">Home</a></li>
+          <li><a href="contacto.html" class="header-tag secondary-l">Work</a></li>
+          <li><a href="galeria.html" class="header-tag secondary-l-2"><strong>About</strong></a></li>
         </ul>
 
       </div>
