--- a/views/galeria.html
+++ b/views/galeria.html
@@ -26,9 +26,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li>Home</li>
-          <li style="color:var(--secondary-light-2)"><strong>Work</strong></li>
-          <li>About</li>
+          <li><a href="../index.html" class="header-tag secondary-l">Home</a></li>
+          <li><a href="galeria.html" class="header-tag secondary-l-2"><strong>Work</strong></a></li>
+          <li><a href="contacto.html" class="header-tag secondary-l">About</a></li>
         </ul>
       </div>
     </div>
