--- a/views/products/class-royale.html
+++ b/views/products/class-royale.html
@@ -22,9 +22,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <a href="../../index.html" class="header-tag secondary-l"><li><strong>Home</strong></li></a>
-          <a href="../galeria.html" class="header-tag secondary-l-2"><li>Work</li></a>
-          <a href="../contacto.html" class="header-tag secondary-l"><li>About</li></a>
+          <li><a href="../../index.html" class="header-tag secondary-l">Home</a></li>
+          <li><a href="../galeria.html" class="header-tag secondary-l-2"><strong>Work</strong></a></li>
+          <li><a href="../contacto.html" class="header-tag secondary-l">About</a></li>
         </ul>
 
       </div>
