improvement to route directions

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -70,7 +70,7 @@
       <input type="button" id="route-btn" value="Calcular ruta"  style="display:none" onclick="calculateRoute()">
     </div>
     <div id="map" style="position:relative;float:left;"></div>
-    <div id="panel" style="position:relative;float:left;width:250px; "></div>
+    <div id="panel" style="position:relative;float:left;width:250px; overflow-y:scroll;"></div>
     </section>
   </main>
   
