links added in contacto

--- a/views/contacto.html
+++ b/views/contacto.html
@@ -44,10 +44,14 @@
           Datos de contacto
         </h4>
         <h5 class="card-text">
-          Teléfono: +34 686706762<br>
-          Email: adrian.dieztefano@gmail.com<br>
-          Linkedin: /adrian-diez-gp<br>
-          GitHub: /adrian-diez
+          Teléfono: +34 686706762<br><br>
+          Email: adrian.dieztefano@gmail.com<br><br>
+          Linkedin: <a href="https://www.linkedin.com/in/adrian-diez-gp/" class="secondary-l">
+            https://www.linkedin.com/in/adrian-diez-gp/
+          </a><br><br>
+          GitHub: <a href="https://github.com/adrian-diez" class="secondary-l">
+            https://github.com/adrian-diez
+          </a>
         </h5>
       </div>
       <div class="card" style="margin:0 50%;">
